--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__content">
-    <h1 class="header__title">NOMBRE DEL GRUPO</h1>
+    <a href="../index.html" class="header__link"><h1 class="header__title">Cleopatra's Digital Empire</h1></a>
   </div>
   <nav class="nav__list">
     <ul class="nav__list--content">
