--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="hero-content">
     <span class="Lorem-ipsum"
-      >Este es el camino</span
+      >"Este es el camino"</span
     >
   </div>
 </section>
