--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,5 @@
     $margin: 15px;
-    $brand_color: #099d8d;
+    /* $brand_color: #099d8d;
     $brandsecundario_color: #14d9c4;
     $negro: black;
     $light-grey-blue: rgba(184, 184, 185, 0.1);
@@ -7,16 +7,26 @@
     $cool-grey: rgba(184, 184, 185, 0.2);
     $cool-grey-full-opacity:#b8b8b9;
     $negro-8: rgba(0, 0, 0, 0.08);
-    $gunmental: #54585a;
+    $gunmental: #54585a; */
     $primary-font: 'Rubik', sans-serif;
     $secondary-font: 'Open Sans', sans-serif;
 
 /*variables team*/
-    $color-blue-green:#099d8d;
-
+// $color-blue-green:#099d8d;
+$brand_color: #E38B29;
+$color-title: #784101;
+$brandsecundario_color: #F1A661;
+$negro: black;
+$light-grey-blue: rgba(184, 184, 185, 0.1);
+$blanco: #fff;
+$cool-grey: rgba(184, 184, 185, 0.2);
+$cool-grey-full-opacity: #b8b8b9;
+$negro-8: rgba(0, 0, 0, 0.08);
+$gunmental: #54585a;
+$lapis: #26619C;
 /* 
-#26619C,
-#E38B29,
+#26619C, AZUL
+#E38B29, 
 #F1A661,
 #FFD8A9,
 #FDEEDC
