--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -3,7 +3,7 @@
     font-family: $secondary-font;
     
     &__title {
-        color: $color-blue-green;
+        color: $color-title;
         text-align: center;
         padding-top: 45px;
         font-size: 2.4rem;  
