--- a/src/html/partials/about-us.html
+++ b/src/html/partials/about-us.html
@@ -6,11 +6,11 @@
         @@description
       </p>
       <div class="about-us__rrss @@className">
-        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
+        <a href="@@linkedin" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
         <span>·</span>
-        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
+        <a href="@@github" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
         <span>·</span>
-        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
+        <a href="@@email" target="_blank"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </div>
   </article>
