--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -2,19 +2,30 @@ img {
     width: 100%;
 }
 /*estilos contacto*/
+.hero__contact {
+    width: 100%;
+    height: 45vh;
+    background-image: url(../images/hero-contact.jpg);
+    background-size: cover;
+    background-position: center;
+}
 .contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    
     &__title {
-        color: $color-blue-green;
+        color: $brand_color;
         font-family: $primary-font;
         text-align: center;
         margin: 30px;
         font-size: 3rem;  
         line-height: 1.5rem;
         font-weight: medium;
+        text-transform: uppercase;
+        &__link {
+            text-decoration: none;
+        }
     }
     &__text {
         font-family: $secondary-font;
