--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -10,8 +10,9 @@
 .hero-content {
     width: 100%;
     height: 90vh;
-    background-image: url(../images/titanic.png);
+    background-image: url(../images/hero-less-1.png);
     background-size: cover;
+    background-position: center;
   
 }
 
@@ -19,13 +20,13 @@
     width: 290px;
     height: 80px;
     font-family: $secondary-font;
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 600;
     font-stretch: normal;
-    font-style: normal;
+    font-style: italic;
     line-height: 1.39;
     letter-spacing: normal;
-    color: $negro;
+    color: $lapis;
     position: absolute;
     bottom: 0;
     transform: translate(-50%, 50%);
