add final fixes

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <small><span class="group__name">Nombre del grupo &copy;2023</span></small>
+  <small><span class="group__name">Cleopatra's Digital Empire &copy;2023</span></small>
   <nav class="footer__nav">
     <ul class="footer__nav--list">
       <li><a href="#team">EQUIPO</a></li>
