--- a/src/html/partials/s-w.html
+++ b/src/html/partials/s-w.html
@@ -4,11 +4,11 @@
           <article class="strengths">
             <h3 class="strengths__title">Fortalezas</h3>
             <p class="strengths__content">Estas cinco mujeres tienen muchas cosas en común, como su espíritu audaz, su dedicación al trabajo duro y su determinación por conseguir lo que se proponen.</p>
-            <p class="strengths__content">Además, la unión de diferentes conocimientos y experiencias serán clave para superar los desafíos que se presenten en su camino hacia la cima de la pirámide.</p>
+            <p class="strengths__content">Además, la unión de diferentes conocimientos y experiencias serán clave para superar los desafíos que se presenten en su camino.</p>
           </article>
           <article class="weaknesses">
             <h3 class="weaknesses__title">Debilidades</h3>
-            <p class="weaknesses__content">Aunque su falta de experiencia sea su debilidad principal, a medida que avancen en su aventura, cada una aportará sus habilidades únicas al equipo, lo que les permitirá crecer y aprender juntas.</p>
+            <p class="weaknesses__content">Aunque su falta de experiencia sea su debilidad principal, a medida que avancen en su aventura, cada una aportará sus habilidades únicas al equipo.</p>
             <p class="weaknesses__content">Con el apoyo mutuo, estas exploradoras lograrán convertirse en unas full-stack developers excepcionales.</p>
           </article>
         </div>
