--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -16,6 +16,7 @@
 $brand_color: #E38B29;
 $color-title: #784101;
 $brandsecundario_color: #F1A661;
+$color-title-lighter: #FFD8A9;
 $negro: black;
 $light-grey-blue: rgba(184, 184, 185, 0.1);
 $blanco: #fff;
