--- a/src/scss/layout/_about-us.scss
+++ b/src/scss/layout/_about-us.scss
@@ -26,7 +26,7 @@
   width: 180px;
   height: 180px;
   border-radius: 10px;
-  border: 5px solid #FFD8A9;
+  border: 5px solid $color-title-lighter;
   object-fit: cover;
 }
 
@@ -107,7 +107,7 @@
     width: 205px;
     height: 205px;
     border-radius: 10px;
-    border: 5px solid $negro-8;
+    border: 5px solid $color-title-lighter;
   }
 }
 
