--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -2,7 +2,7 @@
       <section class="team" id="team">
         <h2 class="team__title">EQUIPO</h2>
         <div class="team__container">
-          <p class="team__container--para">Este equipo está compuesto por cinco exploradoras que se encontraron por casualidad, pero todas comparten un mismo objetivo: descifrar el código full-stack y llegar a la cima de la pirámide. Allí, se encuentra el tesoro que todas desean obtener: el conocimiento y las habilidades necesarias para convertirse en programadoras exitosas.</p>
+          <p class="team__container--para">Este equipo está compuesto por cinco exploradoras que se encontraron por casualidad, pero todas comparten un mismo objetivo: descifrar el código full-stack. Allí, se encuentra el tesoro que todas desean obtener: el conocimiento y las habilidades necesarias para convertirse en programadoras exitosas.</p>
         </div>
         
       </section>
