fix contact link

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,7 +4,7 @@
     <ul class="footer__nav--list">
       <li><a href="#team">EQUIPO</a></li>
       <li><a href="#about-us">QUIÉNES SOMOS</a></li>
-      <li><a href="../contact.html">CONTACTO</a></li>
+      <li><a href="./contact.html">CONTACTO</a></li>
     </ul>
   </nav>
   <img
